ATLAS-5330: Atlas React UI: Text overflow issues in Global Search, Re… (#683)
* ATLAS-5330: Atlas React UI: Text overflow issues in Global Search, Recent Activity, Search Filters, and Popovers for long classification names

* ATLAS-5330: Atlas React UI: Text overflow issues in Global Search, Recent Activity, Search Filters, and Popovers for long classification names

* ATLAS-5330: Atlas React UI: Text overflow issues in Global Search, Recent Activity, Search Filters, and Popovers for long classification names

--- a/dashboard/src/styles/stats.scss
+++ b/dashboard/src/styles/stats.scss
@@ -56,3 +56,7 @@
   font-weight: bold !important;
   color: rgba(0, 0, 0, 0.87) !important;
 }
+
+.classification-name-cell {
+  max-width: 400px;
+}
